blog/deployment.ghost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 0
  template:
    spec:
      metadata:
        labels:
          app: blog
          role: web
      containers:
        - name: ghost
          image: ghost:5.49.3-alpine
          ports:
            - name: http
              containerPort: 2368
          volumeMounts:
            - name: data
              mountPath: /var/lib/ghost/content
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ghost-data
