blog/deployment.mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 0
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        role: db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0.33
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
              subPath: db
      volumes:
        - name: data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/blog
