blog/service.ghost.yaml
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  selector:
    app: ghost
    role: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
