blog/service.mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: ghost
    role: db
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: mysql
