blog/ingress.http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: blog-redirect@kubernetescrd
spec:
  rules:
    - host: blog.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  name: http
