blog/ingress.https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ghost-https
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
      - blog.lan
      secretName: ghost-tls
  rules:
    - host: blog.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ghost
                port:
                  name: http
